--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyDigitalCampusMobile">
         <activity
+            android:name=".LoginPageActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login_page"
+            android:theme="@style/Theme.MyDigitalCampusMobile.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
