--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,19 @@
         <activity
             android:name=".NoteActivity"
             android:exported="true">
+        </activity>
 
+        <activity
+            android:name=".LoginPageActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login_page"
+            android:theme="@style/Theme.MyDigitalCampusMobile.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
         </activity>
-
-        <activity
-            android:name=".LoginPageActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login_page"
-            android:theme="@style/Theme.MyDigitalCampusMobile.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
